[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "fastuaparser"
author = "Almar Klein"
author-email = "almar.klein@gmail.com"
home-page = "https://github.com/almarklein/fastuaparser"
classifiers = ["License :: OSI Approved :: MIT License"]
